--- a/src/app/components/notes-dialog/notes-dialog.component.html
+++ b/src/app/components/notes-dialog/notes-dialog.component.html
@@ -1,10 +1,10 @@
 <div class="notes-dialog">
   <h1 mat-dialog-title>Enter note about location {{data.longitude}},{{data.latitude}}</h1>
   <div mat-dialog-content>
-    <textarea [(ngModel)]="data.comment"></textarea>
+    <textarea [(ngModel)]="data.note"></textarea>
   </div>
   <div mat-dialog-actions>
     <button mat-raised-button color="primary" (click)="onCancelClick()">Cancel</button>
-    <button mat-raised-button color="primary" [mat-dialog-close]="data" cdkFocusInitial>Save</button>
+    <button mat-raised-button color="primary" cdkFocusInitial (click)="onSaveClick()">Save</button>
   </div>
 </div>
